name:                markUp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/markUp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable markUp
  hs-source-dirs:      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , webkit == 0.14.1.0
                     , gtk == 0.14.2
                     , pandoc == 1.17.0.3
                     , process == 1.2.3.0
                     , directory == 1.2.6.3
                     , text == 1.2.2.1
                     , utf8-string == 1.0.1.1
                     , file-embed == 0.0.10
                     , containers == 0.5.6.2
